V 0.0.0.7 - Fixed Banner and added background image. Navbar still need to be aligned properly.

--- a/myapp/Static/css/main.css
+++ b/myapp/Static/css/main.css
@@ -1,20 +1,39 @@
 .banner {
-    position: absolute;
-    left: 50%;
+  padding: 5px 10px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-image: url('/static/images/banner.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  color: black;
+  padding: 60px 0;
+  text-align: center;
+  margin-bottom: 40px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 nav ul {
     list-style-type: none;
-    padding: 0;
+     margin-bottom: 10px;
+     margin: 0;
+  }
+
+  nav ul li {
+    margin-bottom: 10px;
   }
   
   nav a {
     text-decoration: none; /* Removes the default hyperlink underline */
     color: black; /* Sets the text color */
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 20px; /* Sets the font size */
     padding: 5px 10px; /* Adds padding inside the rounded box */
     border-radius: 10px; /* Gives a rounded shape to the box */
-    background-color: lightgrey; /* Sets the background color of the box */
+    background-color: rgb(125, 95, 95); /* Sets the background color of the box */
     transition: background-color 0.3s; /* Smooth transition for hover effect */
   }
   
